2008-09-12 [paul]	3.5.0cvs100

	* configure.ac
		revert cvs99's libenchant commit error

2008-09-12 [colin]	3.5.0cvs99

	* src/inc.c
		Only go to inbox if there are new mails
		(and fetch was manual)

2008-09-10 [colin]	3.5.0cvs98

	* src/inc.c
	* src/summaryview.c
	* src/common/session.c
		Use g_timeout_add_seconds instead of g_timeout_add
		on glib >= 2.14 when we don't need precision on the 
		delay. This helps reducing power consumption:
		http://mjg59.livejournal.com/74651.html

2008-09-10 [colin]	3.5.0cvs97

	* src/compose.c
		Don't save window size and position when
		compose is hidden (filtering action)

2008-09-09 [colin]	3.5.0cvs96

	* src/action.h
	* src/addr_compl.c
	* src/addressadd.c
	* src/addressbook.h
	* src/addressbook_foldersel.c
	* src/addressitem.h
	* src/addrgather.c
	* src/alertpanel.c
	* src/browseldap.c
	* src/editaddress.c
	* src/editaddress_other_attributes_ldap.h
	* src/editbook.c
	* src/editjpilot.c
	* src/editldap.c
	* src/editldap_basedn.c
	* src/editvcard.c
	* src/exphtmldlg.c
	* src/expldifdlg.c
	* src/export.c
	* src/foldersel.c
	* src/foldersel.h
	* src/gedit-print.c
	* src/gedit-print.h
	* src/grouplistdialog.c
	* src/headerview.c
	* src/headerview.h
	* src/image_viewer.c
	* src/import.c
	* src/importldif.c
	* src/importmutt.c
	* src/importpine.c
	* src/inc.c
	* src/main.c
	* src/main.h
	* src/messageview.c
	* src/messageview.h
	* src/noticeview.c
	* src/prefs_actions.c
	* src/prefs_filtering.c
	* src/prefs_folder_column.c
	* src/prefs_gtk.h
	* src/prefs_summary_column.c
	* src/prefs_toolbar.c
	* src/send_message.c
	* src/setup.c
	* src/sourcewindow.c
	* src/sourcewindow.h
	* src/ssl_manager.c
	* src/statusbar.c
	* src/statusbar.h
	* src/stock_pixmap.c
	* src/stock_pixmap.h
	* src/summaryview.c
	* src/textview.c
	* src/textview.h
	* src/undo.h
	* src/uri_opener.c
	* src/wizard.c
	* src/wizard.h
	* src/common/ssl.h
	* src/common/utils.c
	* src/gtk/about.c
	* src/gtk/colorlabel.c
	* src/gtk/colorlabel.h
	* src/gtk/combobox.h